<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrdersActivity">

    <ScrollView
        android:id="@+id/scrollViewOrders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/currentOrders"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="34sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCurrentOrdersList"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:backgroundTint="#f6f6f6"
            android:gravity="bottom"
            app:fabCradleMargin="8dp"
            app:fabCradleRoundedCornerRadius="50dp"
            app:fabCradleVerticalOffset="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <LinearLayout
                    android:id="@+id/homeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="left"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageHome"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="7dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/home" />

                    <TextView
                        android:id="@+id/textHome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textHome"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/trackOrderButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_weight="0.25"
                    android:gravity="left"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="17dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/track_order" />

                    <TextView
                        android:id="@+id/textProfile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="@string/textTrackOrder"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ordersButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="right
"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/supportImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/orders" />

                    <TextView
                        android:id="@+id/textSupport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textOrders"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:gravity="right"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/settingsImage"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginRight="7dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/logout" />

                    <TextView
                        android:id="@+id/textSettings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/textLogout"
                        android:textAlignment="center"
                        android:textColor="#676767"
                        android:textSize="12sp" />
                </LinearLayout>
            </LinearLayout>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cartButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/secondary"
            android:elevation="3dp"
            android:src="@drawable/shopping_cart"
            app:layout_anchor="@id/appBar"
            app:maxImageSize="30dp"
            app:tint="#ffffff"
            tools:ignore="SpeakableTextPresentCheck">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>